started first example of the testbench, got segmentation fault

--- a/act/actsim_test_bench_lib.conf
+++ b/act/actsim_test_bench_lib.conf
@@ -12,8 +12,8 @@ begin sim
         string sim::testbench::fcheck_next "check_next"
         string sim::testbench::fdump_to_file "dump_to_file"
         string sim::testbench::fcontrol_next "control_next"
-        string sim::testbench::fcontrol_next "control_get"
-        string sim::testbench::fcontrol_next "control_wait"
+        string sim::testbench::fcontrol_get "control_get"
+        string sim::testbench::fcontrol_wait "control_wait"
      end
    end
 end
