--- a/act/actsim_test_bench_lib.conf
+++ b/act/actsim_test_bench_lib.conf
@@ -3,8 +3,8 @@ begin sim
    begin extern
      string_tablex libs "test_bench_lib"
      begin test_bench_lib
-	     string path "$ACT_HOME/lib/actsim_test_bench_lib.so"
-        string sim::testbench::fsource_init "source_init"
+	     string path "${ACT_HOME}/lib/actsim_test_bench_lib.so"
+        string sim::testbench::finit "init_tb"
         string sim::testbench::fsource_next "source_next"
         string sim::testbench::fsource_get "source_get"
         string sim::testbench::fcheck_out_of_order "check_out_of_order"
