testbenchlib updated, found a possile bug, didnt't fix it

--- a/act/actsim_test_bench_lib.conf
+++ b/act/actsim_test_bench_lib.conf
@@ -4,16 +4,16 @@ begin sim
      string_tablex libs "test_bench_lib"
      begin test_bench_lib
 	     string path "${ACT_HOME}/lib/actsim_test_bench_lib.so"
-        string sim::testbench::finit "init_tb"
-        string sim::testbench::fsource_next "source_next"
-        string sim::testbench::fsource_get "source_get"
-        string sim::testbench::fcheck_out_of_order "check_out_of_order"
-        string sim::testbench::fcheck_in_order "check_in_order"
-        string sim::testbench::fcheck_next "check_next"
-        string sim::testbench::fdump_to_file "dump_to_file"
-        string sim::testbench::fcontrol_next "control_next"
-        string sim::testbench::fcontrol_get "control_get"
-        string sim::testbench::fcontrol_wait "control_wait"
+        string sim::test_bench_lib::finit "init_tb"
+        string sim::test_bench_lib::fsource_next "source_next"
+        string sim::test_bench_lib::fsource_get "source_get"
+        string sim::test_bench_lib::fcheck_out_of_order "check_out_of_order"
+        string sim::test_bench_lib::fcheck_in_order "check_in_order"
+        string sim::test_bench_lib::fcheck_next "check_next"
+        string sim::test_bench_lib::fdump_to_file "dump_to_file"
+        string sim::test_bench_lib::fcontrol_next "control_next"
+        string sim::test_bench_lib::fcontrol_get "control_get"
+        string sim::test_bench_lib::fcontrol_wait "control_wait"
      end
    end
 end
